Fix [#37290] Movie files filtering does not show *.ts files.